# ChangeLog for x11-base/xfree
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/x11-base/xfree/Attic/ChangeLog,v 1.27 2002/06/24 22:12:26 azarah Exp $

  25 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :

  Add XFree86-4.2.0-i810_i845_20020524.patch and XFree86-4.2.0-Suse-Updates.patch,
  adding Intel 845, and Neomagic XV support among things.  Also a lot of fixes
  from Suse.  The Suse patch is a bit big, but I rather do not want to
  change the ebuild since if the patches are missing, things should still
  work fine.  This should among things resolve bug #3823.

*xfree-4.2.0-r12 (8 Jun 2002)

  8 Jun 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r12.ebuild :

  Basically r11, but just new version to make sure we dont have some
  of the weird issues in past because of a masked revision being changed
  and then unmasked.

*xfree-4.2.0-r11 (28 May 2002)

  7 Jun 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild :

  Add Nvidia GeForce2Go support; bug #2732.  Fix gcc-3.1 compile problem
  thanks to Verwilst.

  6 Jun 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild :

  Update grep expression to determine if the "xfs" user exist in
  /etc/init.d/xfs; bug #3314.

  2 Jun 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild :

  Some more symlink cleanups.  Dont nuke the host.def, just filter our
  hardcoded CFLAGS.

  Fix /etc/X11/xdm/Xsession to first run ~/.xsession, rather then the system
  default (bug #2731).

  30 May 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild,
                                                    xfs.start, xfs.conf.d,
						    xfs.config :

  Fix the xfs port issue in a sane manner ... btw, what happned to the
  idea that changes should be added to the Changelog ?

  29 May 2002; Martin Schlemmer <azarah@gentoo.org> xfree-4.2.0-r11.ebuild :
